--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -24,7 +24,7 @@
             transition: transform 0.3s ease-in;
         }
         .containerButton:hover{
-            transform: translateX(-10%);
+            transform: translateX(-2%);
             background-color: #fff;
             color: green;
             border-color: green;
@@ -76,26 +76,15 @@
         document.getElementById("users").addEventListener("click", fetchUsers);  
         // const getUserButton = document.getElementById('users');
         // api url
-        const api_url = "http://localhost:8000/getUsers";
+        const api_url = "http://192.168.4.37:8000/test";
+        // const api_url = "http://localhost:8000/getUsers";
 
         async function fetchUsers(){
-            // Storing response
-            // const response = await fetch(api_url);
-            
-            // Storing data in form of JSON
-            // var data = await response.json();
-            // console.log(data);
-            // displayUser()
-            // if (response) {
-            //     hideloader();
-            // }
 
             await 
             fetch(api_url)
             .then(res =>console.log(res))
             .catch(err => console.log(err))
-
-
 
         }
 
